fix: AT3-144 Fixed input date and time on mobile
- fixed style on mobile version
    - input dates and time text are under their respective icon
        making them unreadable

--- a/src/styles/scss/config-election-schedule.scss
+++ b/src/styles/scss/config-election-schedule.scss
@@ -159,18 +159,39 @@ main.main {
             }
 
             &.col-6 {
+                input {
+                    @media only screen and (max-width: 576px) and (hover: none) {
+                        padding-left: 25% !important;
+                    }
+                }
+
                 ::-webkit-datetime-edit-fields-wrapper {
                     // targets text content of date and time input
                     // background-color: var(--main-color);
                     margin-left: 20%;
+
+                    @media only screen and (max-width: 500px) and (hover: none) {
+                        margin-left: unset;
+                    }
+
                 }
             }
 
             &.col-12 {
+                input {
+                    @media only screen and (max-width: 576px) and (hover: none) {
+                        padding-left: 15% !important;
+                    }
+                }
+
                 ::-webkit-datetime-edit-fields-wrapper {
                     // targets text content of date and time input
                     // background-color: var(--main-color);
                     margin-left: 9%;
+
+                    @media only screen and (max-width: 500px) and (hover: none) {
+                        margin-left: unset;
+                    }
                 }
             }
         }
